Fix/bookmgmt sync (#83)
* Refactor: standardize package naming to lowercase bookinventorymgmt

* Replace bookmgmt module with feature/book implementation (lowercase package + updated structure)

* Fix Book module issues and stabilize tests

---------

Co-authored-by: Aparnakumar1503 <154442409+Aparnakumar1503@users.noreply.github.com>