@@ -1,79 +1,153 @@
-package com.sprint.BookInventoryMgmt.bookmgmt.service;
+package com.sprint.bookinventorymgmt.bookmgmt.service;
 
-import com.sprint.BookInventoryMgmt.bookmgmt.dto.request.BookRequestDTO;
-import com.sprint.BookInventoryMgmt.bookmgmt.dto.response.BookResponseDTO;
-import com.sprint.BookInventoryMgmt.bookmgmt.entity.Book;
-import com.sprint.BookInventoryMgmt.bookmgmt.entity.Category;
-import com.sprint.BookInventoryMgmt.bookmgmt.entity.Publisher;
-import com.sprint.BookInventoryMgmt.bookmgmt.exceptions.BookNotFoundException;
-import com.sprint.BookInventoryMgmt.bookmgmt.exceptions.CategoryNotFoundException;
-import com.sprint.BookInventoryMgmt.bookmgmt.exceptions.PublisherNotFoundException;
-import com.sprint.BookInventoryMgmt.bookmgmt.mapper.BookMapper;
-import com.sprint.BookInventoryMgmt.bookmgmt.repository.BookRepository;
-import com.sprint.BookInventoryMgmt.bookmgmt.repository.CategoryRepository;
-import com.sprint.BookInventoryMgmt.bookmgmt.repository.PublisherRepository;
+import com.sprint.bookinventorymgmt.bookmgmt.dto.request.BookRequestDTO;
+import com.sprint.bookinventorymgmt.bookmgmt.dto.response.BookResponseDTO;
+import com.sprint.bookinventorymgmt.bookmgmt.entity.Book;
+import com.sprint.bookinventorymgmt.bookmgmt.entity.Category;
+import com.sprint.bookinventorymgmt.bookmgmt.entity.Publisher;
+import com.sprint.bookinventorymgmt.bookmgmt.exception.*;
+import com.sprint.bookinventorymgmt.bookmgmt.mapper.BookMapper;
+import com.sprint.bookinventorymgmt.bookmgmt.repository.BookRepository;
+import com.sprint.bookinventorymgmt.bookmgmt.repository.CategoryRepository;
+import com.sprint.bookinventorymgmt.bookmgmt.repository.PublisherRepository;
+
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
-public class BookServiceImpl implements BookService {
+@Transactional
+public class BookServiceImpl implements IBookService {
 
-    private final BookRepository bookRepository;
-    private final CategoryRepository categoryRepository;
-    private final PublisherRepository publisherRepository;
+    @Autowired
+    private BookRepository bookRepository;
 
-    public BookServiceImpl(BookRepository bookRepository,
-                           CategoryRepository categoryRepository,
-                           PublisherRepository publisherRepository) {
-        this.bookRepository = bookRepository;
-        this.categoryRepository = categoryRepository;
-        this.publisherRepository = publisherRepository;
-    }
+    @Autowired
+    private CategoryRepository categoryRepository;
 
+    @Autowired
+    private PublisherRepository publisherRepository;
+
+    // ================= CREATE =================
     @Override
     public BookResponseDTO createBook(BookRequestDTO dto) {
 
+        // 🔥 BUSINESS VALIDATION (NOT DTO)
+        if (bookRepository.existsById(dto.getIsbn())) {
+            throw new BookAlreadyExistsException(
+                    "Book already exists with ISBN: " + dto.getIsbn()
+            );
+        }
+
         Category category = categoryRepository.findById(dto.getCategoryId())
-                .orElseThrow(() -> new CategoryNotFoundException("Category not found"));
+                .orElseThrow(() ->
+                        new CategoryNotFoundException("Category not found with ID: " + dto.getCategoryId()));
 
         Publisher publisher = publisherRepository.findById(dto.getPublisherId())
-                .orElseThrow(() -> new PublisherNotFoundException("Publisher not found"));
+                .orElseThrow(() ->
+                        new PublisherNotFoundException("Publisher not found with ID: " + dto.getPublisherId()));
 
         Book book = BookMapper.toEntity(dto, category, publisher);
-        Book saved = bookRepository.save(book);
 
-        return BookMapper.toResponse(saved);
+        return BookMapper.toResponse(bookRepository.save(book));
     }
 
+    // ================= GET BY ISBN =================
     @Override
     public BookResponseDTO getBookByIsbn(String isbn) {
-        Book book = bookRepository.findById(isbn)
-                .orElseThrow(() -> new BookNotFoundException("Book not found"));
 
-        return BookMapper.toResponse(book);
+        if (isbn == null || isbn.trim().isEmpty()) {
+            throw new InvalidInputException("ISBN cannot be null or empty");
+        }
+
+        return bookRepository.findById(isbn)
+                .map(BookMapper::toResponse)
+                .orElseThrow(() ->
+                        new BookNotFoundException("Book not found with ISBN: " + isbn));
     }
 
+    // ================= GET ALL =================
     @Override
     public List<BookResponseDTO> getAllBooks() {
-        return bookRepository.findAll()
-                .stream()
+
+        List<Book> books = bookRepository.findAll();
+
+        if (books.isEmpty()) {
+            throw new DataNotFoundException("No books available in the system");
+        }
+
+        return books.stream()
                 .map(BookMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    // ================= FILTER: CATEGORY =================
+    @Override
+    public List<BookResponseDTO> getBooksByCategory(Integer catId) {
+
+        if (catId == null) {
+            throw new InvalidInputException("Category ID cannot be null");
+        }
+
+        if (!categoryRepository.existsById(catId)) {
+            throw new CategoryNotFoundException("Category not found with ID: " + catId);
+        }
+
+        List<Book> books = bookRepository.findByCategoryCatId(catId);
+
+        if (books.isEmpty()) {
+            throw new DataNotFoundException("No books found for category ID: " + catId);
+        }
+
+        return books.stream()
+                .map(BookMapper::toResponse)
+                .toList();
+    }
+
+    // ================= FILTER: PUBLISHER =================
+    @Override
+    public List<BookResponseDTO> getBooksByPublisher(Integer publisherId) {
+
+        if (publisherId == null) {
+            throw new InvalidInputException("Publisher ID cannot be null");
+        }
+
+        if (!publisherRepository.existsById(publisherId)) {
+            throw new PublisherNotFoundException("Publisher not found with ID: " + publisherId);
+        }
+
+        List<Book> books = bookRepository.findByPublisherPublisherId(publisherId);
+
+        if (books.isEmpty()) {
+            throw new DataNotFoundException("No books found for publisher ID: " + publisherId);
+        }
+
+        return books.stream()
+                .map(BookMapper::toResponse)
+                .toList();
+    }
+
+    // ================= UPDATE =================
     @Override
     public BookResponseDTO updateBook(String isbn, BookRequestDTO dto) {
 
+        if (isbn == null || isbn.trim().isEmpty()) {
+            throw new InvalidInputException("ISBN cannot be null or empty");
+        }
+
         Book existing = bookRepository.findById(isbn)
-                .orElseThrow(() -> new BookNotFoundException("Book not found"));
+                .orElseThrow(() ->
+                        new BookNotFoundException("Book not found with ISBN: " + isbn));
 
         Category category = categoryRepository.findById(dto.getCategoryId())
-                .orElseThrow(() -> new CategoryNotFoundException("Category not found"));
+                .orElseThrow(() ->
+                        new CategoryNotFoundException("Category not found with ID: " + dto.getCategoryId()));
 
         Publisher publisher = publisherRepository.findById(dto.getPublisherId())
-                .orElseThrow(() -> new PublisherNotFoundException("Publisher not found"));
+                .orElseThrow(() ->
+                        new PublisherNotFoundException("Publisher not found with ID: " + dto.getPublisherId()));
 
         existing.setTitle(dto.getTitle());
         existing.setDescription(dto.getDescription());
@@ -81,24 +155,54 @@ public class BookServiceImpl implements BookService {
         existing.setCategory(category);
         existing.setPublisher(publisher);
 
-        Book updated = bookRepository.save(existing);
-
-        return BookMapper.toResponse(updated);
+        return BookMapper.toResponse(bookRepository.save(existing));
     }
 
+    // ================= DELETE =================
     @Override
-    public void deleteBook(String isbn) {
+    public String deleteBook(String isbn) {
+
+        if (isbn == null || isbn.trim().isEmpty()) {
+            throw new InvalidInputException("ISBN cannot be null or empty");
+        }
+
         Book book = bookRepository.findById(isbn)
-                .orElseThrow(() -> new BookNotFoundException("Book not found"));
+                .orElseThrow(() ->
+                        new BookNotFoundException("Book not found with ISBN: " + isbn));
 
         bookRepository.delete(book);
+
+        return "Book deleted successfully with ISBN: " + isbn;
     }
 
+    // ================= FILTER: CATEGORY + PUBLISHER =================
     @Override
     public List<BookResponseDTO> getBooksByCategoryAndPublisher(Integer catId, Integer publisherId) {
-        return bookRepository.findByCategoryCatIdAndPublisherPublisherId(catId, publisherId)
-                .stream()
+
+        if (catId == null || publisherId == null) {
+            throw new InvalidInputException("Category ID and Publisher ID cannot be null");
+        }
+
+        if (!categoryRepository.existsById(catId)) {
+            throw new CategoryNotFoundException("Category not found with ID: " + catId);
+        }
+
+        if (!publisherRepository.existsById(publisherId)) {
+            throw new PublisherNotFoundException("Publisher not found with ID: " + publisherId);
+        }
+
+        List<Book> books =
+                bookRepository.findByCategoryCatIdAndPublisherPublisherId(catId, publisherId);
+
+        if (books.isEmpty()) {
+            throw new DataNotFoundException(
+                    "No books found for category ID: " + catId +
+                            " and publisher ID: " + publisherId
+            );
+        }
+
+        return books.stream()
                 .map(BookMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
